--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
           <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
         </ul>
       </div>
-
     </div>
   </nav>
   <header class="jumbotron">
@@ -40,8 +39,11 @@
           <h1>Ristorante con Fusion</h1>
           <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
         </div>
-        <div class="col-12 col-sm align-self-center">
+        <div class="col-12 col-sm-3 align-self-center">
           <img src="img/logo.png" alt="logo" class="img-fluid">
+        </div>
+        <div class="col-12 col-sm-3 align-self-center">
+          <ul> <a href="#reserve" role="button" class="btn btn-block btn-sm btn-warning">Reserve Table</a> </ul>
         </div>
       </div>
     </div>
@@ -73,13 +75,18 @@
           <h3>This Month's Promotions</h3>
         </div>
         <div class="col col-sm col-md">
-          <h2>Weekend Grand Buffet</h2>
-          <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+          <div class="media">
+            <div class="media-body">
+              <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span> </h2>
+              <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            </div>
+            <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
+          </div>
         </div>
       </div>
 
       <div class="row row-content align-items-center">
-        <div class="col-12 order-sm-last col-sm-4 col-md-3">
+        <div class="col-12 col-sm-4 col-md-3">
           <h3>Meet our Culinary Specialists</h3>
         </div>
         <div class="col order-sm-first col-sm col-md">
@@ -94,6 +101,49 @@
                 whos-who in the culinary world, he specializes in
                 creating mouthwatering Indo-Italian fusion experiences.
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-content align-items-center">
+        <div class="col-sm-8 offset-sm-2">
+          <div class="card" id="reserve">
+            <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+            <div class="card-body">
+              <form>
+                <div class="form-group row">
+                  <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
+                  <div class="col-md-10">
+                    <input type="radio" id="one" name="guests">
+                    <label for="one">1</label>
+                    <input type="radio" id="two" name="guests">
+                    <label for="two">2</label>
+                    <input type="radio" id="three" name="guests">
+                    <label for="three">3</label>
+                    <input type="radio" id="four" name="guests">
+                    <label for="four">4</label>
+                    <input type="radio" id="five" name="guests">
+                    <label for="five">5</label>
+                    <input type="radio" id="six" name="guests">
+                    <label for="six">6</label>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label for="datetime" class="col-md-2 col-form-label">Date and time</label>
+                  <div class="col-12 col-md-4">
+                    <input type="text" name="date" placeholder="Date">
+                  </div>
+                  <div class="col-12 col-md-4">
+                    <input type="text" name="time" placeholder="Time">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <div class="offset-md-2 col-md-10">
+                    <button type="submit" class="btn btn-primary">Reserve</button>
+                  </div>
+                </div>
+              </form>
             </div>
           </div>
         </div>
