--- a/index.html
+++ b/index.html
@@ -72,6 +72,66 @@
     </div>
   </div>
 
+  <div class="modal fade" id="reservemodal" role="dialog">
+    <div class="modal-dialog modal-lg" role="content">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Reserve a Table</h4>
+          <button type="button" class="close" data-dismiss="modal">&times</button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group row">
+              <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
+              <div class="col-md-10">
+                <input type="radio" id="one" name="guests">
+                <label for="one">1</label>
+                <input type="radio" id="two" name="guests">
+                <label for="two">2</label>
+                <input type="radio" id="three" name="guests">
+                <label for="three">3</label>
+                <input type="radio" id="four" name="guests">
+                <label for="four">4</label>
+                <input type="radio" id="five" name="guests">
+                <label for="five">5</label>
+                <input type="radio" id="six" name="guests">
+                <label for="six">6</label>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="section" class="col-md-2 col-form-label">Section</label>
+              <div class="col col-md-10">
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-success active">
+                  <input type="radio" name="nonsmoke" id="nonsmoking" autocomplete="off" checked="true"> Non-Smoking
+                </label>
+                <label class="btn btn-danger">
+                  <input type="radio" name="smoke" id="smoking" autocomplete="off"> Smoking
+                </label>
+              </div>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="datetime" class="col-md-2 col-form-label">Date and time</label>
+              <div class="col-12 col-md-4">
+                <input type="text" name="date" placeholder="Date">
+              </div>
+              <div class="col-12 col-md-4">
+                <input type="text" name="time" placeholder="Time">
+              </div>
+            </div>
+            <div class="form-group row">
+              <div class="offset-md-2 col-md-10">
+                <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-primary">Reserve</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <header class="jumbotron">
     <div class="container">
       <div class="row rwo-header">
@@ -84,8 +144,7 @@
         </div>
         <div class="col-12 col-sm-3 align-self-center">
           <ul> <a href="#reserve" role="button" class="btn btn-block btn-sm btn-warning"
-            data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+852 12345678</strong>"
-            data-placement="bottom">Reserve Table</a> </ul>
+            data-toggle="modal" data-target="#reservemodal">Reserve Table</a> </ul>
           </div>
         </div>
       </div>
@@ -197,48 +256,6 @@
           </div>
         </div>
 
-        <div class="row row-content align-items-center">
-          <div class="col-sm-8 offset-sm-2">
-            <div class="card" id="reserve">
-              <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-              <div class="card-body">
-                <form>
-                  <div class="form-group row">
-                    <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
-                    <div class="col-md-10">
-                      <input type="radio" id="one" name="guests">
-                      <label for="one">1</label>
-                      <input type="radio" id="two" name="guests">
-                      <label for="two">2</label>
-                      <input type="radio" id="three" name="guests">
-                      <label for="three">3</label>
-                      <input type="radio" id="four" name="guests">
-                      <label for="four">4</label>
-                      <input type="radio" id="five" name="guests">
-                      <label for="five">5</label>
-                      <input type="radio" id="six" name="guests">
-                      <label for="six">6</label>
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label for="datetime" class="col-md-2 col-form-label">Date and time</label>
-                    <div class="col-12 col-md-4">
-                      <input type="text" name="date" placeholder="Date">
-                    </div>
-                    <div class="col-12 col-md-4">
-                      <input type="text" name="time" placeholder="Time">
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <div class="offset-md-2 col-md-10">
-                      <button type="submit" class="btn btn-primary">Reserve</button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
 
         <footer class="footer">
@@ -290,11 +307,7 @@
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script type="text/javascript">
-        $(document).ready(function() {
-          $('[data-toggle="tooltip"]').tooltip();
-        })
-        </script>
+
       </body>
 
       </html>
