--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
         </ul>
         <span class="navbar-text">
-          <a data-toggle="modal" data-target="#loginModal"><span class="fa fa-sign-in"></span>Login</a>
+          <a id="loginbutton"><span class="fa fa-sign-in"></span>Login</a>
         </span>
       </div>
     </div>
@@ -41,7 +41,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">Login</h4>
-          <button type="button" class="close" data-dismiss="modal">&times</button>
+          <button type="button" class="close" id="loginclose">&times</button>
         </div>
         <div class="modal-body">
           <form>
@@ -63,7 +63,7 @@
               </div>
             </div>
             <div class="form-row">
-              <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-secondary btn-sm ml-auto" id="dismisslogin">Cancel</button>
               <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
             </div>
           </form>
@@ -77,7 +77,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">Reserve a Table</h4>
-          <button type="button" class="close" data-dismiss="modal">&times</button>
+          <button type="button" class="close" id="reserveclose">&times</button>
         </div>
         <div class="modal-body">
           <form>
@@ -122,7 +122,7 @@
             </div>
             <div class="form-group row">
               <div class="offset-md-2 col-md-10">
-                <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-secondary ml-auto" id="dismissreserve">Cancel</button>
                 <button type="submit" class="btn btn-primary">Reserve</button>
               </div>
             </div>
@@ -143,8 +143,7 @@
           <img src="img/logo.png" alt="logo" class="img-fluid">
         </div>
         <div class="col-12 col-sm-3 align-self-center">
-          <ul> <a href="#reserve" role="button" class="btn btn-block btn-sm btn-warning"
-            data-toggle="modal" data-target="#reservemodal">Reserve Table</a> </ul>
+          <ul> <a role="button" class="btn btn-block btn-sm btn-warning" id="reservebutton">Reserve Table</a> </ul>
           </div>
         </div>
       </div>
@@ -196,6 +195,9 @@
               <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                 <span class="carousel-control-next-icon"></span>
               </a>
+              <button class="btn btn-danger btn-sm" id="carouselButton">
+                  <span id="carousel-button-icon" class="fa fa-pause"></span>
+              </button>
             </div>
           </div>
         </div>
@@ -307,7 +309,42 @@
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+        <script type="text/javascript">
+          $("#carouselButton").click(function(){
+                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
+                    $("#mycarousel").carousel('pause');
+                    $("#carouselButton").children("span").removeClass('fa-pause');
+                    $("#carouselButton").children("span").addClass('fa-play');
+                }
+                else if ($("#carouselButton").children("span").hasClass('fa-play')){
+                    $("#mycarousel").carousel('cycle');
+                    $("#carouselButton").children("span").removeClass('fa-play');
+                    $("#carouselButton").children("span").addClass('fa-pause');
+                }
+            });
+        </script>
+        <script type="text/javascript">
+          $("#loginbutton").click(function() {
+            $('#loginModal').modal('show');
+          });
+          $("#loginclose").click(function() {
+            $('#loginModal').modal('hide');
+          });
+          $("#dismisslogin").click(function() {
+            $('#loginModal').modal('hide');
+          });
+        </script>
+        <script type="text/javascript">
+          $("#reservebutton").click(function() {
+            $('#reservemodal').modal('show');
+          });
+          $("#reserveclose").click(function() {
+            $('#reservemodal').modal('hide');
+          });
+          $("#dismissreserve").click(function() {
+            $('#reservemodal').modal('hide');
+          });
+        </script>
       </body>
 
       </html>
